--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,6 +15,7 @@ header {
 main {
     position: relative;
     display: flex;
+    flex-direction:column;
     justify-content: center;
     align-items: center;
     height: calc(100vh - 150px); /* Adjusts for header and footer */
