--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Roboto', sans-serif;
     background-color: #756b6b;
     margin: 0;
     padding: 0;
@@ -36,6 +36,16 @@ main {
     width: 400px !important;
     z-index: 1; /* Ensure the board is displayed on top */
 }
+
+#progressBarContainer {
+    width: 400px;
+    margin-top: 20px;
+}
+
+#progressBar {
+    width: 100%;
+}
+
 
 #infoPanel {
     background-color: #f4f4f4;
