--- a/libs/chessboardjs/chessboard.css
+++ b/libs/chessboardjs/chessboard.css
@@ -23,13 +23,13 @@
 }
 
 .white-1e1d7 {
-  background-color: #f0d9b5;
-  color: #b58863;
+  background-color: #e1ebeb;
+  color: #6376b5;
 }
 
 .black-3c85d {
-  background-color: #b58863;
-  color: #f0d9b5;
+  background-color: #8890a1;
+  color: #b5d5f0;
 }
 
 .highlight1-32417, .highlight2-9c5d2 {
